--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Numpy__II.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Numpy__II.ipynb
@@ -71,7 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,10 +98,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  4]\n",
+      " [ 2 -3]\n",
+      " [ 3  5]\n",
+      " [-5  4]\n",
+      " [ 0 -1]\n",
+      " [ 3  2]\n",
+      " [-1  1]\n",
+      " [ 5 -2]\n",
+      " [-5  3]\n",
+      " [-5  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = np.array(alumnos_aidone)\n",
+    "print(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5,  4],\n",
+       "       [ 2, -3],\n",
+       "       [ 3,  5],\n",
+       "       [-5,  4],\n",
+       "       [ 0, -1],\n",
+       "       [ 3,  2],\n",
+       "       [-1,  1],\n",
+       "       [ 5, -2],\n",
+       "       [-5,  3],\n",
+       "       [-5,  1],\n",
+       "       [-2,  5],\n",
+       "       [ 0,  4]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Teresa = [-2,5]\n",
+    "Udo = [0,4]\n",
+    "\n",
+    "np.vstack([alumnos_aidone,Teresa, Udo])  #No deja con concatenate por tener diferente dimensión Teresa y Udo (1) que alumnos (2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  4]\n",
+      " [ 2 -3]\n",
+      " [ 3  5]\n",
+      " [-5  4]\n",
+      " [ 0 -1]\n",
+      " [ 3  2]\n",
+      " [-1  1]\n",
+      " [ 5 -2]\n",
+      " [-5  3]\n",
+      " [-5  1]\n",
+      " [-2  5]\n",
+      " [ 0  4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alumnos_aidone_nuevo = np.concatenate((alumnos_aidone, [Teresa], [Udo]), axis=0) #Claro, concatenate sí con el axis = 0 porque añades TEresa y Udo con 1 dimensión cada uno\n",
+    "print(alumnos_aidone_nuevo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,16 +201,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  5.  4.]\n",
+      " [ 0.  2. -3.]\n",
+      " [ 0.  3.  5.]\n",
+      " [ 0. -5.  4.]\n",
+      " [ 0.  0. -1.]\n",
+      " [ 0.  3.  2.]\n",
+      " [ 0. -1.  1.]\n",
+      " [ 0.  5. -2.]\n",
+      " [ 0. -5.  3.]\n",
+      " [ 0. -5.  1.]\n",
+      " [ 0. -2.  5.]\n",
+      " [ 0.  0.  4.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crear una matriz de ceros con el mismo número de filas que la matriz original\n",
+    "columna_ceros = np.zeros((alumnos_aidone_nuevo.shape[0], 1))   #se crea con la misma dimensión una columna (eje 1) de ceros\n",
+    "\n",
+    "# Concatenar la columna de ceros al principio de cada vector\n",
+    "matriz_con_ceros = np.concatenate((columna_ceros, alumnos_aidone_nuevo), axis=1) #Se concatena en el eje 1 = columnas\n",
+    "\n",
+    "print(matriz_con_ceros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Para Rodrigo con vector [5 4]:\n",
+      "CAI\n",
+      "Para Lucia con vector [ 2 -3]:\n",
+      "ER\n",
+      "Para Alejandro con vector [3 5]:\n",
+      "CAI\n",
+      "Para Valeria con vector [-5  4]:\n",
+      "NMPC\n",
+      "Para Javier con vector [ 0 -1]:\n",
+      "ER\n",
+      "Para Camila con vector [3 2]:\n",
+      "CAI\n",
+      "Para Diego con vector [-1  1]:\n",
+      "NMPC\n",
+      "Para Gabriela con vector [ 5 -2]:\n",
+      "ER\n",
+      "Para Mateo con vector [-5  3]:\n",
+      "NMPC\n",
+      "Para Sofía con vector [-5  1]:\n",
+      "NMPC\n",
+      "Para Teresa con vector [-2  5]:\n",
+      "NMPC\n",
+      "Para Udo con vector [0 4]:\n",
+      "CAI\n"
+     ]
+    }
+   ],
    "source": [
     "alumnos_ref = [\"Rodrigo\",\"Gabriela\",\"Mateo\"]\n",
     "lista_alumnos = ['Rodrigo', 'Lucia', 'Alejandro', 'Valeria', 'Javier', 'Camila', 'Diego', 'Gabriela', 'Mateo', 'Sofía','Teresa','Udo']\n",
     "curso_asignado = [\"CAI\",\"ER\",\"NMPC\"]\n",
     "\n",
     "##### CAMBIA LA SIGUIENTE LINEA, según 2.1 ######\n",
-    "diccionario_reparto = {} \n",
+    "alumnos_aidone_matriz = np.array(alumnos_aidone_nuevo)\n",
     "#################################################\n",
     "\n",
     "num_alumnos = len(lista_alumnos)\n",
@@ -126,8 +283,8 @@
     "for i_vector in range(num_alumnos): # Recorremos el diccionario donde tenemos el vector que caracteriza \n",
     "    \n",
     "    alumno = lista_alumnos[i_vector]\n",
-    "    vector_alumno = alumnos_aidone[i_vector]\n",
-    "    print(f\"Par {alumno} con vector {vector_alumno}:\")\n",
+    "    vector_alumno = alumnos_aidone_matriz[i_vector]\n",
+    "    print(f\"Para {alumno} con vector {vector_alumno}:\")\n",
     "\n",
     "    distancia_minima = 99999999 \n",
     "    indice_distancia_minima = -1\n",
@@ -136,16 +293,16 @@
     "\n",
     "    for indice_curso,alumno_ref in enumerate(alumnos_ref):\n",
     "        indice_alumno_ref = lista_alumnos.index(alumno_ref)\n",
-    "        vec_ref = alumnos_aidone[indice_alumno_ref] \n",
+    "        vec_ref = alumnos_aidone_matriz[indice_alumno_ref] \n",
     "        \n",
     "        ####### 2.2 MODIFICA EL SIGUIENTE FRAGMENTO PARA UTILIZAR METODOS Y FuNCIONES NUMPY, recuerda que la norma se obtiene con np.linalg.norm ####\n",
-    "        distancia = distancia_2d(vector, vec_ref, 1) # Obtenemos la distancia \n",
+    "        distancia = np.linalg.norm(vector_alumno - vec_ref) # Obtenemos la distancia \n",
     "        #########################################################################################################################################\n",
     "        vector_distancias[indice_curso] = distancia\n",
-    "   \n",
+    "\n",
     "    ######################################################### 2.3 COMPLETA LA SIGUIENTE LINEA ######################################\n",
-    "    indice_curso_elegido = __.___(______)\n",
-    "    print(f\"{____________[___________]}\")\n",
+    "    indice_curso_elegido = np.argmin(vector_distancias)\n",
+    "    print(f\"{curso_asignado[indice_curso_elegido]}\")\n",
     "    ###############################################################################################"
    ]
   },
@@ -158,9 +315,40 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (12,2) (3,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[43], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m alumnos_aidone_matriz \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(alumnos_aidone_nuevo)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Calcular distancias para Teresa\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m vector_distancias_teresa \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(\u001b[43malumnos_aidone_matriz\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mvector_teresa\u001b[49m, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m) \u001b[38;5;66;03m#Con axis = 1 se realiza la operacion a lo largo de las columnas para comparar los puntos de cada compañero\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Calcular distancias para Udo\u001b[39;00m\n\u001b[0;32m      9\u001b[0m vector_distancias_udo \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(alumnos_aidone_matriz \u001b[38;5;241m-\u001b[39m vector_udo, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (12,2) (3,) "
+     ]
+    }
+   ],
+   "source": [
+    "vector_teresa = np.array([0,-2, 5])\n",
+    "vector_udo = np.array([0,0, 4])\n",
+    "alumnos_aidone_matriz = np.array(alumnos_aidone_nuevo)\n",
+    "\n",
+    "# Calcular distancias para Teresa\n",
+    "vector_distancias_teresa = np.linalg.norm(alumnos_aidone_matriz - vector_teresa, axis=1) #Con axis = 1 se realiza la operacion a lo largo de las columnas para comparar los puntos de cada compañero\n",
+    "\n",
+    "# Calcular distancias para Udo\n",
+    "vector_distancias_udo = np.linalg.norm(alumnos_aidone_matriz - vector_udo, axis=1)\n",
+    "\n",
+    "# Asignar clases a Teresa y Udo\n",
+    "clase_teresa = curso_asignado[np.argmin(vector_distancias_teresa)]\n",
+    "clase_udo = curso_asignado[np.argmin(vector_distancias_udo)]\n",
+    "\n",
+    "print(f\"Teresa fue asignada a la clase: {clase_teresa}\")\n",
+    "print(f\"Udo fue asignado a la clase: {clase_udo}\")"
+   ]
   },
   {
    "attachments": {
@@ -203,12 +391,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1. Crea un tablero de 10x10 relleno del carácter espacio \" \". \n",
+    "#(Utiliza un array de Numpy para representarlo y creálo utilizando las inicializaciones que hemos aprendidio)\n",
+    "\n",
+    "tablero = np.full((10,10),\"\")\n",
+    "print(tablero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['' 'O' '' '' '' '' '' '' '' '']\n",
+      " ['' 'O' '' 'O' 'O' 'O' 'O' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2. Posiciona un par de barcos en [(0,1), (1,1)] y [(1,3), (1,4), (1,5), (1,6)]. \n",
+    "#Los barcos serán Os mayúsculas. Como ves, un barco de dos posiciones de eslora y otro de cuatro.\n",
+    "\n",
+    "def posicion_barcos(tablero, coordenadas):\n",
+    "    for coord in coordenadas:\n",
+    "        fila,columna = coord\n",
+    "        tablero[fila,columna] = \"O\"\n",
+    "\n",
+    "barco_1 = [(0,1), (1,1)] \n",
+    "barco_2 = [(1,3), (1,4), (1,5), (1,6)]\n",
+    "\n",
+    "posicion_barcos(tablero,barco_1)\n",
+    "posicion_barcos(tablero,barco_2)\n",
+    "\n",
+    "print(tablero)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['' 'O' '' '' '' '' '' '' '' '']\n",
+      " ['-' 'X' '' 'O' 'O' 'O' 'O' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '-' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3. Recibe un disparo en uno de los barcos, sustituyendo la O por una X\n",
+    "def disparo(tablero, coordenadas):\n",
+    "        fila, columna = coordenadas\n",
+    "        if tablero[fila, columna] == \"O\":\n",
+    "            print(\"Has dado en un barco!!!!\")\n",
+    "            tablero[fila, columna] = \"X\"\n",
+    "\n",
+    "#4. Recibe un disparo en agua, sustituyendo uno de los espacios por un guión: -\n",
+    "        elif tablero[fila,columna] == \"\":\n",
+    "            print(\"Has disparado al agua :(\")\n",
+    "            tablero[fila, columna] = \"-\"\n",
+    "\n",
+    "\n",
+    "disparo_1 = (1,1)\n",
+    "disparo_2 = (5,4)\n",
+    "disparo_3 = (1,0)\n",
+    "\n",
+    "disparo(tablero, disparo_1)\n",
+    "disparo(tablero, disparo_2)\n",
+    "disparo(tablero, disparo_3)\n",
+    "\n",
+    "print(tablero)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']\n",
+      " ['' '' '' '' '' '' '' '' '' '']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5. Ignorando los disparos recibidos, ahora prueba a posicionar otro barco de 4 posiciones \n",
+    "#dentro del tablero, pero **de manera ALEATORIA.**\n",
+    "\n",
+    "tablero = np.full((10,10),\"\")\n",
+    "print(tablero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -234,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4,
   "vscode": {
