--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Numpy__II.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Numpy__II.ipynb
@@ -549,6 +549,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tentativa: 9, 5, O, [(9, 5), (9, 4), (9, 3), (9, 2)]\n",
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ' ' ']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random \n",
+    "\n",
+    "def posicion_barco_aleatorio(tablero, longitud):\n",
+    "        \n",
+    "    while True:\n",
+    "        fila = random.randint(0, tablero.shape[0] - 1)   #shape[0] indica filas   #Restar 1 es necesario porque estamos generando índices aleatorios y queremos asegurarnos de que estén en el rango válido. Por ejemplo, si tienes un array de 10 filas, el índice de la última fila sería 9. Al restar 1, nos aseguramos de que los índices generados aleatoriamente estén dentro de los límites válidos (0 a tablero.shape[0] - 1).\n",
+    "        columna = random.randint(0, tablero.shape[1] - 1)   #shape[1] indica columnas\n",
+    "        orientacion = random.choice([\"N\", \"S\", \"E\", \"O\"])\n",
+    "\n",
+    "        posiciones = []\n",
+    "\n",
+    "        for i in range(longitud):\n",
+    "            if orientacion == \"N\" and fila - i >= 0:\n",
+    "                posiciones.append((fila - i, columna))\n",
+    "            elif orientacion == \"S\" and fila + i < tablero.shape[0]:\n",
+    "                posiciones.append((fila + i, columna))\n",
+    "            elif orientacion == \"E\" and columna + i < tablero.shape[1]:\n",
+    "                posiciones.append((fila, columna + i))\n",
+    "            elif orientacion == \"O\" and columna - i >= 0:\n",
+    "                posiciones.append((fila, columna - i))\n",
+    "            else:\n",
+    "                break\n",
+    "        print(f\"Tentativa: {fila}, {columna}, {orientacion}, {posiciones}\")\n",
+    "\n",
+    "        if len(posiciones) == longitud and all(tablero[pos] == \" \" for pos in posiciones):\n",
+    "            for pos in posiciones:\n",
+    "                tablero[pos] = \"O\"\n",
+    "            break\n",
+    "\n",
+    "tablero = np.full((10, 10), \" \")\n",
+    "\n",
+    "posicion_barco_aleatorio(tablero, 4)\n",
+    "\n",
+    "print(tablero)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
