--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/11_Ejercicios_Manipulaciones.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Ejercicios_Workout/11_Ejercicios_Manipulaciones.ipynb
@@ -73,10 +73,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2 3 4]\n",
+      " [5 6 7 8 9]]\n",
+      "[[1 1 1 1 1]\n",
+      " [1 1 1 1 1]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4],\n",
+       "       [5, 6, 7, 8, 9],\n",
+       "       [1, 1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.arange(10).reshape(2,-1)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "b = np.repeat(1, 10).reshape(2,-1)\n",
+    "np.vstack([a,b])"
+   ]
   },
   {
    "attachments": {
@@ -106,10 +138,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4, 1, 1, 1, 1, 1],\n",
+       "       [5, 6, 7, 8, 9, 1, 1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack([a,b])"
+   ]
   },
   {
    "attachments": {
@@ -138,10 +184,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[ 0 10 20 30 40 50 60 70 80 90]\n",
+      "9\n",
+      "[1 2 3 4 5 6 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_array = np.arange(10)\n",
+    "print(my_array)\n",
+    "\n",
+    "my_array_x10 = my_array * 10\n",
+    "print(my_array_x10)\n",
+    "\n",
+    "ultimo_elemento = my_array[-1]\n",
+    "print(ultimo_elemento)\n",
+    "\n",
+    "print(my_array[1:8])"
+   ]
   },
   {
    "attachments": {
@@ -169,10 +237,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  4  7 10 13 16 19 22 25 28 31 34 37 40 43 46 49]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.arange(1,50,3)\n",
+    "print(x)"
+   ]
   },
   {
    "attachments": {
@@ -200,10 +279,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.   3.75 3.5  3.25 3.   2.75 2.5  2.25 2.   1.75 1.5  1.25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = np.arange(4,1,-0.25)\n",
+    "print(y)"
+   ]
   },
   {
    "attachments": {
@@ -228,10 +318,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.82685305 0.86778353 0.18342662]\n",
+      "  [0.86009352 0.92729279 0.66208081]\n",
+      "  [0.31183407 0.0877369  0.7253877 ]\n",
+      "  [0.25430895 0.50595908 0.07086307]\n",
+      "  [0.54043819 0.398376   0.16848133]]\n",
+      "\n",
+      " [[0.88505454 0.38613824 0.91508678]\n",
+      "  [0.08894469 0.96992295 0.64657552]\n",
+      "  [0.71045857 0.08090467 0.44836992]\n",
+      "  [0.06490028 0.83923964 0.22393507]\n",
+      "  [0.45814167 0.6351228  0.39752258]]\n",
+      "\n",
+      " [[0.72386323 0.59518897 0.56610185]\n",
+      "  [0.00522324 0.34343911 0.88593183]\n",
+      "  [0.15804982 0.68454207 0.83246203]\n",
+      "  [0.53779019 0.71130738 0.51193762]\n",
+      "  [0.29037332 0.99015883 0.82310576]]\n",
+      "\n",
+      " [[0.67633029 0.49967236 0.10493801]\n",
+      "  [0.8883621  0.81527188 0.13530331]\n",
+      "  [0.32871654 0.98109063 0.05479789]\n",
+      "  [0.96231606 0.28919462 0.53127822]\n",
+      "  [0.33379257 0.97139405 0.33564033]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = np.random.random((4,5,3))\n",
+    "print(z)"
+   ]
   },
   {
    "attachments": {
@@ -258,10 +381,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10]\n",
+      "[ 0  1  2 -1 -1 -1 -1 -1 -1  9 10]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  9, 10])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = np.arange(11)\n",
+    "print(s)\n",
+    "\n",
+    "#np.where(s[3:9], -1, s)\n",
+    "\n",
+    "s[3:9] = -1\n",
+    "print(s)\n",
+    "\n",
+    "dejar_hasta_3 = s[:3]\n",
+    "dejar_el_final = s[9:]\n",
+    "\n",
+    "np.concatenate([dejar_hasta_3,dejar_el_final])\n",
+    "\n"
+   ]
   },
   {
    "attachments": {
@@ -288,10 +444,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4  5  6]\n",
+      " [ 7  8  9 10 11 12]\n",
+      " [13 14 15 16 17 18]\n",
+      " [19 20 21 22 23 24]\n",
+      " [25 26 27 28 29 30]\n",
+      " [31 32 33 34 35 36]]\n",
+      "[[15 16]\n",
+      " [21 22]]\n",
+      "[[30 32]\n",
+      " [42 44]]\n",
+      "[[ 1  2  3  4  5  6]\n",
+      " [ 7  8  9 10 11 12]\n",
+      " [13 14 30 32 17 18]\n",
+      " [19 20 42 44 23 24]\n",
+      " [25 26 27 28 29 30]\n",
+      " [31 32 33 34 35 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = np.full((6,6), np.arange(1,37).reshape(6,6))\n",
+    "print(m)\n",
+    "\n",
+    "nucleo = m[2:4, 2:4]\n",
+    "print(nucleo)\n",
+    "\n",
+    "doble_centro = m[2:4, 2:4]*2\n",
+    "print(doble_centro)\n",
+    "\n",
+    "m1 = np.copy(m)\n",
+    "m1[2:4, 2:4] *= 2\n",
+    "print(m1)"
+   ]
   },
   {
    "attachments": {
@@ -316,10 +508,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 5  7]\n",
+      "  [ 5  4]\n",
+      "  [ 4  5]]\n",
+      "\n",
+      " [[ 2  8]\n",
+      "  [ 3  7]\n",
+      "  [ 7 10]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-1, -1],\n",
+       "        [-1,  4],\n",
+       "        [ 4, -1]],\n",
+       "\n",
+       "       [[ 2,  8],\n",
+       "        [-1, -1],\n",
+       "        [-1, 10]]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ej_9 = np.random.randint(1,12, size=(2,3,2))\n",
+    "print(ej_9)\n",
+    "\n",
+    "np.where(ej_9 % 2 != 0, -1, ej_9)"
+   ]
   },
   {
    "attachments": {
@@ -344,10 +571,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "vector = np.array([1,2,0,0,4,0])\n",
+    "no_cero = np.where(vector != 0)\n",
+    "print(vector[no_cero])"
+   ]
   },
   {
    "attachments": {
@@ -368,6 +607,27 @@
    "metadata": {},
    "source": [
     "Crea un array de 3x3 con las palabras de la frase \"El viento sopló sobre su sombra maldita y traicionera\". Modifica el array para que en vez de las palabras aparezca la longitud de estas. Pista: tendrás que investigar la función np.vectorize. (Este ejercicio lo veremos en la sesión en vivo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "full() got an unexpected keyword argument 'size'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[57], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m frase \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfull\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mEl\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mviento\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msopló\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msobre\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msu\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msombra\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmaldita\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43my\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtraicionera\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: full() got an unexpected keyword argument 'size'"
+     ]
+    }
+   ],
+   "source": [
+    "frase = np.full(\"El\", \"viento\", \"sopló\", \"sobre\", \"su\", \"sombra\", \"maldita\", \"y\", \"traicionera\", size =(3,3))"
    ]
   },
   {
@@ -394,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.11"
   },
   "vscode": {
    "interpreter": {
