--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Numpy__II.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_02/Practica_Obligatoria/18_Practica_Obligatoria_Numpy__II.ipynb
@@ -574,11 +574,13 @@
     "import random \n",
     "\n",
     "def posicion_barco_aleatorio(tablero, longitud):\n",
-    "        \n",
+    "            #Iniciamos un bucle while que se ejecutará indefinidamente hasta que se cumpla cierta condición. \n",
+    "            #En este caso, el bucle seguirá ejecutándose hasta que se logre posicionar el barco correctamente \n",
+    "            #en el tablero.\n",
     "    while True:\n",
     "        fila = random.randint(0, tablero.shape[0] - 1)   #shape[0] indica filas   #Restar 1 es necesario porque estamos generando índices aleatorios y queremos asegurarnos de que estén en el rango válido. Por ejemplo, si tienes un array de 10 filas, el índice de la última fila sería 9. Al restar 1, nos aseguramos de que los índices generados aleatoriamente estén dentro de los límites válidos (0 a tablero.shape[0] - 1).\n",
-    "        columna = random.randint(0, tablero.shape[1] - 1)   #shape[1] indica columnas\n",
-    "        orientacion = random.choice([\"N\", \"S\", \"E\", \"O\"])\n",
+    "        columna = random.randint(0, tablero.shape[1] - 1)   #shape[1] indica columnas #El valor aleatorio va desde (0 al tamaño de fila o columna, por eso el -1)\n",
+    "        orientacion = random.choice([\"N\", \"S\", \"E\", \"O\"])   #te da aleatoriamente una orientación\n",
     "\n",
     "        posiciones = []\n",
     "\n",
@@ -594,7 +596,9 @@
     "            else:\n",
     "                break\n",
     "        print(f\"Tentativa: {fila}, {columna}, {orientacion}, {posiciones}\")\n",
-    "\n",
+    "### Verificamos si la longitud de las posiciones es igual a la longitud esperada del barco y si todas\n",
+    "        # las posiciones en el tablero están vacías (es decir, \" \"). Si ambas condiciones son verdaderas, \n",
+    "        #significa que podemos colocar el barco en estas posiciones.\n",
     "        if len(posiciones) == longitud and all(tablero[pos] == \" \" for pos in posiciones):\n",
     "            for pos in posiciones:\n",
     "                tablero[pos] = \"O\"\n",
