--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Algebra_Numpy.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Algebra_Numpy.ipynb
@@ -255,7 +255,6 @@
     "\n",
     "peliculas = [\"Toy Story\", \"Jumanji\", \"Mortal Kombat\", \"Pocahontas\"]\n",
     "print(peliculas)\n",
-    "peliculas_nuevas = peliculas.append(\"Wall_E\")\n",
     "#Toy_Story = [Aventura, Animación, Comedia]\n",
     "Toy_Story = np.array([0,1,1,1,0])\n",
     "#Jumanji = [Aventura]\n",
@@ -473,38 +472,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Toy Story y Toy Story son la misma peli\n",
-      "Toy Story y Jumanji: 1.0\n",
-      "Toy Story y Mortal Kombat: 0.7071067811865475\n",
-      "Toy Story y Pocahontas: 0.7071067811865475\n",
-      "Toy Story y Wall_E: 1.7320508075688774\n",
-      "Jumanji y Toy Story: 0.5773502691896258\n",
-      "Jumanji y Jumanji son la misma peli\n",
-      "Jumanji y Mortal Kombat: 0.7071067811865475\n",
-      "Jumanji y Pocahontas: 0.0\n",
-      "Jumanji y Wall_E: 0.5773502691896258\n",
-      "Mortal Kombat y Toy Story: 0.5773502691896258\n",
-      "Mortal Kombat y Jumanji: 1.0\n",
-      "Mortal Kombat y Mortal Kombat son la misma peli\n",
-      "Mortal Kombat y Pocahontas: 0.0\n",
-      "Mortal Kombat y Wall_E: 0.5773502691896258\n",
-      "Pocahontas y Toy Story: 0.5773502691896258\n",
-      "Pocahontas y Jumanji: 0.0\n",
-      "Pocahontas y Mortal Kombat: 0.0\n",
-      "Pocahontas y Pocahontas son la misma peli\n",
-      "Pocahontas y Wall_E: 0.5773502691896258\n",
-      "Wall_E y Toy Story: 1.7320508075688774\n",
-      "Wall_E y Jumanji: 1.0\n",
-      "Wall_E y Mortal Kombat: 0.7071067811865475\n",
-      "Wall_E y Pocahontas: 0.7071067811865475\n",
-      "Wall_E y Wall_E son la misma peli\n"
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'for' statement on line 10 (2656730656.py, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[43], line 11\u001b[1;36m\u001b[0m\n\u001b[1;33m    if i != j:\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'for' statement on line 10\n"
      ]
     }
    ],
