--- a/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Algebra_Numpy.ipynb
+++ b/02_Programacion_y_Herramientas_Avanzadas/Sprint_03/Unidad_01/Practica_Obligatoria/18_Practica_Obligatoria_Algebra_Numpy.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -381,18 +381,18 @@
      "output_type": "stream",
      "text": [
       "Toy Story y Toy Story son la misma peli\n",
-      "Toy Story y Jumanji: 1.0\n",
-      "Toy Story y Mortal Kombat: 0.7071067811865475\n",
-      "Toy Story y Pocahontas: 0.7071067811865475\n",
+      "Toy Story y Jumanji: 0.5773502691896258\n",
+      "Toy Story y Mortal Kombat: 0.40824829046386296\n",
+      "Toy Story y Pocahontas: 0.40824829046386296\n",
       "Jumanji y Toy Story: 0.5773502691896258\n",
       "Jumanji y Jumanji son la misma peli\n",
       "Jumanji y Mortal Kombat: 0.7071067811865475\n",
       "Jumanji y Pocahontas: 0.0\n",
-      "Mortal Kombat y Toy Story: 0.5773502691896258\n",
-      "Mortal Kombat y Jumanji: 1.0\n",
+      "Mortal Kombat y Toy Story: 0.40824829046386296\n",
+      "Mortal Kombat y Jumanji: 0.7071067811865475\n",
       "Mortal Kombat y Mortal Kombat son la misma peli\n",
       "Mortal Kombat y Pocahontas: 0.0\n",
-      "Pocahontas y Toy Story: 0.5773502691896258\n",
+      "Pocahontas y Toy Story: 0.40824829046386296\n",
       "Pocahontas y Jumanji: 0.0\n",
       "Pocahontas y Mortal Kombat: 0.0\n",
       "Pocahontas y Pocahontas son la misma peli\n"
@@ -405,16 +405,18 @@
     "# axis=1 especifica que queremos calcular las normas a lo largo del eje de las columnas que son las pelis.\n",
     "\n",
     "for i, pelicula1 in enumerate(peliculas):\n",
+    "    vector1 = matriz_peliculas[i]\n",
     "    for j, pelicula2 in enumerate(peliculas):\n",
+    "        vector2 = matriz_peliculas[j]\n",
     "        if i != j:\n",
-    "            print(f\"{pelicula1} y {pelicula2}: {similitudes[i][j]}\")\n",
+    "            print(f\"{pelicula1} y {pelicula2}: {np.dot(vector1, vector2) / (np.linalg.norm(vector1) * np.linalg.norm(vector2))}\")\n",
     "        else:\n",
     "            print(f\"{pelicula1} y {pelicula2} son la misma peli\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +465,7 @@
    ],
    "source": [
     "Wall_E = np.array([0,1,1,1,0])\n",
-    "\n",
+    "peliculas = peliculas.append(\"Wall_E\")\n",
     "#Para añadir un nuevo vector (pelicula) a la matriz ya existente:\n",
     "\n",
     "matriz_nueva = np.vstack([matriz_peliculas,Wall_E])\n",
@@ -472,7 +474,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, pelicula1 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43menumerate\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpeliculas\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[0;32m      2\u001b[0m     vector1 \u001b[38;5;241m=\u001b[39m matriz_nueva[i]\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j, pelicula2 \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(peliculas):\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for i, pelicula1 in enumerate(peliculas):\n",
+    "    vector1 = matriz_nueva[i]\n",
+    "    for j, pelicula2 in enumerate(peliculas):\n",
+    "        vector2 = matriz_nueva[j]\n",
+    "        if i != j:\n",
+    "            print(f\"{pelicula1} y {pelicula2}: {np.dot(vector1, vector2) / (np.linalg.norm(vector1) * np.linalg.norm(vector2))}\")\n",
+    "        else:\n",
+    "            print(f\"{pelicula1} y {pelicula2} son la misma peli\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +511,7 @@
      "evalue": "expected an indented block after 'for' statement on line 10 (2656730656.py, line 11)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[43], line 11\u001b[1;36m\u001b[0m\n\u001b[1;33m    if i != j:\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'for' statement on line 10\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[12], line 11\u001b[1;36m\u001b[0m\n\u001b[1;33m    if i != j:\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'for' statement on line 10\n"
      ]
     }
    ],
